syntax = "proto3";

package orderpb;

option go_package = "/orderpb";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Order {
    string id = 1;
    string orderNumber = 2;
    google.protobuf.Timestamp CreatedDateTime = 3;
    User user = 4;
    ShippingAddress shippingAddress = 5;
    repeated OrderLine items = 6;
    Amount totalAmount = 7;
}

message User {
    string id          = 1;
    string userName    = 2;
    string mail        = 3;
    string phoneNumber = 4;
}

message ShippingAddress {
    string id      = 1;
    string city    = 2;
    string country = 3;
    string county  = 4;
    string detail  = 5;
}

message OrderLine {
    string name      = 1;
    string sku       = 2;
    int32  quantity  = 3;
    Amount price     = 4;
}

message Amount {
    double value    = 1;
    string currency = 2;
}

message CreateOrderRequest {
    Order order = 1;
}

message CreateOrderResponse {
    string id = 1;
}

message UpdateOrderRequest {
    Order order = 1;
}

message DeleteOrderRequest {
    string id = 1;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

service OrderService {
    rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder (GetOrderRequest) returns (GetOrderResponse);
    rpc UpdateOrder (UpdateOrderRequest) returns (google.protobuf.Empty);
    rpc DeleteOrder (DeleteOrderRequest) returns (google.protobuf.Empty);
}